[gd_scene load_steps=7 format=3 uid="uid://crh0wya5rua77"]

[ext_resource type="Script" path="res://data_draw_id.gd" id="1_2llc1"]
[ext_resource type="Script" path="res://DrawIDButton.cs" id="1_cov2b"]
[ext_resource type="FontFile" uid="uid://cofdusi6aylde" path="res://MiSans-Demibold.ttf" id="3_1i2d2"]
[ext_resource type="Script" path="res://area_2d.gd" id="3_8f78t"]
[ext_resource type="Script" path="res://SettingsButton.cs" id="4_sm1j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ihe3"]
size = Vector2(361, 475)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2llc1")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_8f78t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(175.5, 227.5)
shape = SubResource("RectangleShape2D_5ihe3")

[node name="DrawButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 73.0
offset_top = 278.0
offset_right = 283.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "  抽学号  "
script = ExtResource("1_cov2b")

[node name="Window" type="Window" parent="DrawButton"]
positional_shadow_atlas_size = 0
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
initial_position = 1
size = Vector2i(1200, 1100)
visible = false
unresizable = true
borderless = true

[node name="ColorRect" type="ColorRect" parent="DrawButton/Window"]
custom_minimum_size = Vector2(10000, 10000)
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4550.0
offset_top = -4600.0
offset_right = 4550.0
offset_bottom = 4600.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.387176, 0.761268, 0.864117, 1)

[node name="Label" type="Label" parent="DrawButton/Window"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -136.5
offset_right = 129.5
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="DrawButton"]
light_mask = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -14.0
offset_top = -122.0
offset_right = -14.0
offset_bottom = -67.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.383501, 0.757753, 0.861401, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("3_1i2d2")
theme_override_font_sizes/font_size = 40

[node name="ResetButton" type="Button" parent="DrawButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.043
anchor_top = 0.24
anchor_right = 1.043
anchor_bottom = 0.24
offset_left = 4.96999
offset_top = -17.48
offset_right = 49.97
offset_bottom = 12.52
theme_override_fonts/font = ExtResource("3_1i2d2")
theme_override_font_sizes/font_size = 20
text = "重置"
script = ExtResource("1_cov2b")

[node name="SettingsButton" type="Button" parent="."]
offset_left = 300.0
offset_top = 325.0
offset_right = 345.0
offset_bottom = 355.0
theme_override_fonts/font = ExtResource("3_1i2d2")
theme_override_font_sizes/font_size = 20
text = "设置"
script = ExtResource("4_sm1j0")

[node name="Window" type="Window" parent="SettingsButton"]
auto_translate_mode = 1
title = "设置"
initial_position = 1
size = Vector2i(600, 500)
visible = false
always_on_top = true
popup_window = true

[node name="ColorRect" type="ColorRect" parent="SettingsButton/Window"]
light_mask = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[node name="Button" type="Button" parent="SettingsButton/Window"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_1i2d2")
theme_override_font_sizes/font_size = 35
text = "关闭"

[node name="TabBar" type="TabBar" parent="SettingsButton/Window"]
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_1i2d2")
theme_override_font_sizes/font_size = 20
tab_alignment = 1
clip_tabs = false
drag_to_rearrange_enabled = true
scroll_to_selected = false
select_with_rmb = true
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="SettingsButton/Window/TabBar"]
layout_mode = 1
offset_right = 148.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 25
current_tab = 0
clip_tabs = false
drag_to_rearrange_enabled = true

[node name="通用" type="VBoxContainer" parent="SettingsButton/Window/TabBar/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="SettingsButton/Window/TabBar/TabContainer/通用"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "设置学号范围
从               到"
vertical_alignment = 3

[node name="min" type="LineEdit" parent="SettingsButton/Window/TabBar/TabContainer/通用/Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.424
anchor_top = 0.224
anchor_right = 0.432
anchor_bottom = 0.418
offset_top = 10.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 15
placeholder_text = "最小值"
alignment = 1
clear_button_enabled = true

[node name="max" type="LineEdit" parent="SettingsButton/Window/TabBar/TabContainer/通用/Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.231
anchor_right = 1.0
anchor_bottom = 0.445
offset_left = 50.0
offset_top = 10.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 15
placeholder_text = "最大值"
alignment = 1
clear_button_enabled = true

[node name="高级" type="VBoxContainer" parent="SettingsButton/Window/TabBar/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CheckButton" type="CheckButton" parent="SettingsButton/Window/TabBar/TabContainer/高级"]
layout_mode = 2
text = "设置抽学号界面语言1"

[node name="CheckButton2" type="CheckButton" parent="SettingsButton/Window/TabBar/TabContainer/高级"]
layout_mode = 2
text = "语言1"

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="button_down" from="DrawButton" to="DrawButton" method="_OnButtonDown"]
[connection signal="button_down" from="DrawButton/ResetButton" to="DrawButton" method="_OnResetButtonDown"]
[connection signal="button_down" from="SettingsButton" to="SettingsButton" method="_OnSettingsButtonDown"]
[connection signal="button_down" from="SettingsButton/Window/Button" to="SettingsButton" method="_OnCloseButtonDown"]
[connection signal="ready" from="SettingsButton/Window/TabBar/TabContainer/通用/Label/min" to="." method="_on_min_id_text_edit_ready"]
[connection signal="text_changed" from="SettingsButton/Window/TabBar/TabContainer/通用/Label/min" to="." method="_on_min_id_text_edit_changed"]
[connection signal="text_changed" from="SettingsButton/Window/TabBar/TabContainer/通用/Label/max" to="." method="_on_max_id_text_edit_changed"]
